<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/urltitle" />

    <EditText
        android:id="@+id/urlbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/urlhint"
        android:textSize="12sp" />
    
    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/urlbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textOff="@string/startposting"
        android:textOn="@string/stopposting" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/urlbox"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/output" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/statusbox"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

</RelativeLayout>